<resources>
    <string name="app_name">Colour Food</string>
    <string name="facebook_app_id">182801828811134</string>
    <string name="id">Identification</string>
    <string name="pw">Password</string>
    <string name="check_pw">Check Password</string>
    <string name="login">Sign In</string>
    <string name="join">Sign Up</string>
    <string name="man">Male</string>
    <string name="female">Female</string>
    <string name="birth">Birthday</string>
    <string name="custom_recommend">Custom Recommend</string>
    <string name="people_recommend">People Recommend</string>
    <string name="add_review">Add reviews</string>
    <string name="setting">Settings</string>
    <string name="installed_version">Installed version</string>
    <string name="latest_version">Latest version</string>
    <string name="notice">Notice</string>
    <string name="inquiry">Inquiry</string>
    <string name="logout">Logout</string>
    <string name="network_not_connected">Not connected to Internet</string>
    <string name="filter">Filter</string>
    <string name="align">Align</string>
    <string name="except_food">Exepct Foods</string>
    <string name="smart_filter">Smart Filter</string>
    <string name="chicken">Chicken</string>
    <string name="pizza">Pizza</string>
    <string name="chinese_food">Chinese Food</string>
    <string name="japanese_food">Japanese Food</string>
    <string name="europ_food">Europ Food</string>
    <string name="korea_food">Korea Food</string>
    <string name="park">Is Park</string>
    <string name="pet">Is Pet</string>
    <string name="family">For Family</string>
    <string name="couple">For Couple</string>
    <string name="group">For Group</string>
    <string name="residence">Residence</string>
    <string name="prefer_residence">Prefer Residence</string>
    <string name="choice">Choice</string>
    <string name="analyze_user_prefer">Analyze User Prefer</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="title_activity_user_prefer">UserPrefer</string>
</resources>
