<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:text="@string/join"
                android:layout_marginLeft="16dp"
                android:layout_gravity="center_vertical"
                />
        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="40dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_join_id"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/id"
                    android:layout_marginBottom="5dp"
                    android:textSize="12dp"
                    android:textColor="@color/colorPrimary"
                    android:paddingLeft="10dp"
                    android:singleLine="true"
                    android:maxLength="25"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_join_pw"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/pw"
                    android:textSize="12dp"
                    android:textColor="@color/colorPrimary"
                    android:paddingLeft="10dp"
                    android:password="true"
                    android:layout_marginBottom="5dp"
                    android:maxLength="15"
                    android:singleLine="true"
                    android:inputType="textVisiblePassword"/>
            </android.support.design.widget.TextInputLayout>




            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_join_pw2"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/check_pw"
                    android:textSize="12dp"
                    android:textColor="@color/colorPrimary"
                    android:paddingLeft="10dp"
                    android:password="true"
                    android:layout_marginBottom="5dp"
                    android:maxLength="15"
                    android:singleLine="true"
                    android:inputType="textVisiblePassword"/>
            </android.support.design.widget.TextInputLayout>




            <RadioGroup
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">
                <RadioButton
                    android:id="@+id/rb_join_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/man"/>
                <RadioButton
                    android:id="@+id/rb_join_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"/>
            </RadioGroup>

            <!-- 생일 입력을 위한 폼 구성 요소 : 시작 -->
            <Button
                android:id="@+id/bt_join_birth"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/birth"
                android:background="@drawable/round_stroke"
                android:layout_marginBottom="5dp"
                />

            <!-- 생일 입력을 위한 폼 구성 요소 : 끝 -->

            <!-- 거주 지역 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/residence"
                    android:layout_marginRight="10dp"/>
                <Button
                    android:id="@+id/bt_join_residence"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/choice"
                    android:background="@drawable/round_stroke_white"/>
            </LinearLayout>
            <!-- 거주지역 끝-->

            <!-- 선호 지역 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/prefer_residence"
                    android:layout_marginRight="10dp"/>
                <Button
                    android:id="@+id/bt_join_prefer_residence"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/choice"
                    android:background="@drawable/round_stroke_white"/>
            </LinearLayout>
            <!-- 선호지역 끝-->

            <Button
                android:id="@+id/bt_join_join"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/round_stroke_fill"
                android:text="@string/join"
                android:textSize="13dp"
                android:textColor="@color/white" />


        </LinearLayout>
    </ScrollView>



</LinearLayout>