<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Activity.MainActivity"
    android:background="@color/colorPrimary">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="10dp"
        >

        <EditText
            android:id="@+id/et_login_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_stroke_white"
            android:padding="10dp"
            android:hint="@string/id"
            android:textColorHint="#fff"
            android:textColor="#fff"
            android:textSize="13dp"
            android:layout_marginBottom="7dp"
            android:singleLine="true"/>
        <EditText
            android:id="@+id/et_login_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_stroke_white"
            android:padding="10dp"
            android:hint="@string/pw"
            android:textSize="13dp"
            android:textColorHint="#fff"
            android:textColor="#fff"
            android:password="true"
            android:layout_marginBottom="10dp"
            android:maxLength="20"
            android:singleLine="true"/>
        <Button
            android:id="@+id/bt_login_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="4dp"
            android:text="@string/login"
            android:textSize="13dp"
            android:background="@drawable/round_stroke"
            />
        <Button
            android:id="@+id/bt_login_join"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/join"
            android:textSize="13dp"
            android:textColor="#fff"
            android:background="@drawable/round_stroke_white"
            />

    </LinearLayout>

</RelativeLayout>